--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "webpack-official",
+  "sideEffects": [
+    "*.css"
+  ],
   "version": "1.0.0",
   "description": "",
   "private": true,
